# R_D_Software_Ground_Station_Inclita_2026

./: .gitignore  Cargo.toml  README.md  flight_data.csv
.github/workflows/: rust.yml
html/: index.html
src/: hardware_cfg.rs  main.rs  mock.rs
src/handlers/: helper_foo.rs  mod.rs  sockets_handler.rs
