[package]
name = "GroundStation_Inclita"
version = "0.1.0"
edition = "2024"

[dependencies]
rppal = "0.22.1"
serde_json = "1.0.149"
tower-http = { version = "0.6.8", features = ["fs"] }  #for using wifi ap
axum = { version = "0.7.0", features = ["ws"] }
tokio = { version = "1.49.0", features = ["full", "time", "sync", "signal"] }    #for async rust
serde = { version = "1.0.228", features = ["derive"] } # for deserialy CSV
log = "0.4.29"
bincode = "1.3.3"
embedded-hal = "0.2.7"
embedded-hal-bus = "0.3.0"


sx127x_lora = { version = "0.3.1", optional = true, default-features = false }
linux-embedded-hal = "0.4.1"



[features]
lora = ["dep:sx127x_lora"]
default = ["lora"]
no-hardware-mock = []

