[package]
name = "GroundStation_Inclita"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.149"
tower-http = { version = "0.6.8", features = ["fs"] } #for using wifi ap
axum = { version = "0.7.0", features = ["ws"] }
tokio = { version = "1.49.0", features = [
  "full",
  "time",
  "sync",
  "signal",
] } #for async rust
serde = { version = "1.0.228", features = ["derive"] } # for deserialy CSV
log = "0.4.29"


rppal = "0.22.1"
radio = "0.12.1"
radio-sx127x = "0.14.0"
embedded-hal = "1.0.0"
bincode = "3.0.0"
