[package]
name = "GroundStation_Inclita"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.7.9", features = ["ws"]}
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
tower-http = { version = "0.5.2", features = ["fs"] }

# The New Linux-Native Hardware Stack
linux-embedded-hal = "0.3.2"
sx127x_lora = "0.3.1"
embedded-hal = "0.2.7"
